Fix too wide global search dialog (#3540)

--- a/client/src/app/site/modules/global-headbar/components/global-search/global-search.component.scss
+++ b/client/src/app/site/modules/global-headbar/components/global-search/global-search.component.scss
@@ -34,10 +34,9 @@
 
 .search-results {
     position: relative;
-    max-width: calc(100% + 48px);
-    margin: 0 -24px -24px -24px;
+    max-width: 800px;
     padding: 0;
-    display: contents;
+    display: flex;
     max-height: auto;
 
     .info {
